[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/MENU.png" type="Texture" id=1]
[ext_resource path="res://scripts/Clean.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/menu.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/art/play_button2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/play_button1.png" type="Texture" id=5]
[ext_resource path="res://assets/art/sfx_button1.png" type="Texture" id=6]
[ext_resource path="res://assets/art/sfx_button2.png" type="Texture" id=7]
[ext_resource path="res://assets/art/music_button1.png" type="Texture" id=8]
[ext_resource path="res://assets/art/music_button2.png" type="Texture" id=9]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="Sprite" parent="."]
position = Vector2( 256, 144.417 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0 )
margin_left = 175.292
margin_top = 79.9439
margin_right = 323.292
margin_bottom = 140.944
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PLAYButton" type="TextureButton" parent="."]
margin_left = 175.408
margin_top = 80.2715
margin_right = 324.408
margin_bottom = 141.271
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXButton" type="TextureButton" parent="."]
margin_left = 190.0
margin_top = 160.0
margin_right = 241.0
margin_bottom = 205.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MUSICButton" type="TextureButton" parent="."]
margin_left = 261.0
margin_top = 160.0
margin_right = 312.0
margin_bottom = 205.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = 0.4

[node name="FadeOut" type="Tween" parent="."]
pause_mode = 2

[node name="FadeIn" type="Tween" parent="."]

[connection signal="button_down" from="PlayButton" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="PLAYButton" to="." method="_on_PLAYButton_button_up"]
[connection signal="button_up" from="SFXButton" to="." method="_on_SFXButton_button_up"]
[connection signal="button_up" from="MUSICButton" to="." method="_on_MUSICButton_button_up"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
[connection signal="tween_started" from="FadeIn" to="." method="_on_FadeIn_tween_started"]
